--- a/src/App.css
+++ b/src/App.css
@@ -38,15 +38,15 @@ z-index: -1;
 .card_container{
   display: flex;
   width: 80%;
-  margin: 0 auto;
+  margin: 1.5rem auto;
   flex-wrap: wrap;
-  justify-content: space-between;
   align-items: center;
+  gap: 1.5rem;
+
 }
 .card{
 width: 30%;
 border: 1px solid black;
-margin: 1rem 0;
 height: 370px;
 }
 .card_figure{
@@ -81,6 +81,85 @@ background-color: antiquewhite;
 }
 .card_button{
   background-color:  rgb(62, 119, 235);
+  color: white;
+  border: none;
+  height: fit-content;
+  width: fit-content;
+  padding: .5rem 1rem;
+  border-radius: 5px;
+}
+
+
+/***************** detail container ************************/
+.detail_section{
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem;
+}
+.detail_container{
+  width: 70%;
+  margin-right: 20px;
+  box-shadow: 5px 5px 20px 10px rgb(205, 204, 204);
+  padding: 1rem;
+}
+.detail_figure{
+  width: 100%;
+  aspect-ratio: 2/1;
+  padding: 1rem 0;
+}
+.detail_image{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.related_container{
+  width: 30%;
+  margin: 20px 0;
+}
+
+.related_card{
+  display: flex;
+  align-items: center;
+  height: 100px;
+  gap: 20px;
+  box-shadow: 5px 5px 20px 10px rgb(205, 204, 204);
+  margin: 1rem 0;
+  padding: 1rem;
+  width: 80%;
+}
+.related_figure{
+  width: 30%;
+height: 100px;
+margin: 0;
+}
+.related_image{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.related_title{
+  height: 60px;
+  overflow: hidden;
+  font-size: 1rem;
+}
+.related_detail{
+  display: flex;
+  gap: 10px;
+}
+.related_button{
+  background-color:  rgb(62, 119, 235);
+  color: white;
+  border: none;
+  height: fit-content;
+  width: fit-content;
+  padding: .25rem .5rem;
+  border-radius: 5px;
+}
+
+
+.Home_btn{
+  margin:0 1rem;
+   background-color:  rgb(62, 119, 235);
   color: white;
   border: none;
   height: fit-content;
